# fastmatrix

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  main.cpp  tests.cpp
bench/: CMakeLists.txt  bench.cpp  timer.h
fastmatrix/: fastmatrix.hpp
